--- a/package.json
+++ b/package.json
@@ -1,19 +1,60 @@
 {
-  "name": "modsen-currency-tracker",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/Vadimshidlov/modsen-currency-tracker.git",
-  "author": "Vadimshidlov <vadim.shidlov@gmail.com>",
-  "license": "MIT",
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jest": "^27.9.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.2.5",
-    "typescript": "^5.3.3"
-  }
+    "name": "modsen-currency-tracker",
+    "version": "1.0.0",
+    "main": "index.js",
+    "repository": "https://github.com/Vadimshidlov/modsen-currency-tracker.git",
+    "author": "Vadimshidlov <vadim.shidlov@gmail.com>",
+    "license": "MIT",
+    "scripts": {
+        "build:dev": "webpack --env mode=development",
+        "build:prod": "webpack --env mode=production",
+        "start": "webpack serve --env mode=development",
+        "eject": "react-scripts eject",
+        "lint": "eslint . --color",
+        "lint:fix": "eslint --fix .",
+        "format": "prettier --write src/**/*.{ts,tsx,css,md,json} --config ./.prettierrc",
+        "test": "jest"
+    },
+    "devDependencies": {
+        "@svgr/webpack": "^8.1.0",
+        "@types/jest": "^29.5.12",
+        "@types/node": "^20.11.19",
+        "@types/react": "^18.2.57",
+        "@types/react-dom": "^18.2.19",
+        "@types/webpack": "^5.28.5",
+        "@types/webpack-dev-server": "^4.7.2",
+        "@typescript-eslint/eslint-plugin": "^7.0.2",
+        "@typescript-eslint/parser": "^7.0.2",
+        "babel-jest": "^29.7.0",
+        "css-loader": "^6.10.0",
+        "eslint": "^8.56.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-airbnb-typescript": "^17.1.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-jest": "^27.9.0",
+        "eslint-plugin-jsx-a11y": "^6.8.0",
+        "eslint-plugin-prettier": "^5.1.3",
+        "eslint-plugin-react": "^7.33.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "html-webpack-plugin": "^5.6.0",
+        "jest": "^29.7.0",
+        "mini-css-extract-plugin": "^2.8.0",
+        "prettier": "^3.2.5",
+        "sass": "^1.71.0",
+        "sass-loader": "^14.1.1",
+        "style-loader": "^3.3.4",
+        "ts-jest": "^29.1.2",
+        "ts-loader": "^9.5.1",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.3.3",
+        "webpack": "^5.90.3",
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^5.0.2"
+    },
+    "dependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.22.1"
+    }
 }
