--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
         "lint": "eslint . --color",
         "lint:fix": "eslint --fix .",
         "format": "prettier --write src/**/*.{ts,tsx,css,md,json} --config ./.prettierrc",
-        "test": "jest"
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage"
     },
     "devDependencies": {
         "@svgr/webpack": "^8.1.0",
+        "@testing-library/jest-dom": "^6.4.2",
+        "@testing-library/react": "^14.2.1",
         "@types/jest": "^29.5.12",
         "@types/node": "^20.11.19",
         "@types/react": "^18.2.57",
@@ -25,7 +29,6 @@
         "@types/webpack-dev-server": "^4.7.2",
         "@typescript-eslint/eslint-plugin": "^7.0.2",
         "@typescript-eslint/parser": "^7.0.2",
-        "babel-jest": "^29.7.0",
         "css-loader": "^6.10.0",
         "eslint": "^8.56.0",
         "eslint-config-airbnb": "^19.0.4",
@@ -39,6 +42,7 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "html-webpack-plugin": "^5.6.0",
         "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
         "mini-css-extract-plugin": "^2.8.0",
         "prettier": "^3.2.5",
         "sass": "^1.71.0",
@@ -56,5 +60,8 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.22.1"
+    },
+    "resolutions": {
+        "string-width": "4.2.3"
     }
 }
