--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "format": "prettier --write src/**/*.{ts,tsx,css,md,json} --config ./.prettierrc",
         "test": "jest",
         "test:watch": "jest --watch",
-        "test:coverage": "jest --coverage"
+        "test:coverage": "jest --coverage",
+        "prepare": "husky"
     },
     "devDependencies": {
         "@svgr/webpack": "^8.1.0",
@@ -41,6 +42,7 @@
         "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "html-webpack-plugin": "^5.6.0",
+        "husky": "^9.0.11",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
         "mini-css-extract-plugin": "^2.8.0",
