--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
         "test": "jest",
         "test:watch": "jest --watch",
         "test:coverage": "jest --coverage",
-        "prepare": "husky"
+        "precommit": "npm run lint && npm test"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "npm run precommit"
+        }
     },
     "devDependencies": {
         "@svgr/webpack": "^8.1.0",
