--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "test": "jest",
         "test:watch": "jest --watch",
         "test:coverage": "jest --coverage",
-        "precommit": "npm run lint && npm test"
+        "prepare": "husky"
     },
     "husky": {
         "hooks": {
