--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@svgr/webpack": "^8.1.0",
         "@testing-library/jest-dom": "^6.4.2",
         "@testing-library/react": "^14.2.1",
+        "@types/dotenv-webpack": "^7.0.7",
         "@types/jest": "^29.5.12",
         "@types/node": "^20.11.19",
         "@types/react": "^18.2.57",
@@ -36,6 +37,7 @@
         "@typescript-eslint/eslint-plugin": "^7.0.2",
         "@typescript-eslint/parser": "^7.0.2",
         "css-loader": "^6.10.0",
+        "dotenv-webpack": "^8.0.1",
         "eslint": "^8.56.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-airbnb-typescript": "^17.1.0",
@@ -66,6 +68,7 @@
     "dependencies": {
         "@types/react-redux": "^7.1.33",
         "axios": "^1.6.7",
+        "axios-cache-adapter": "^2.7.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.0",
