--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
         "react-redux": "^9.1.0",
         "react-router-dom": "^6.22.1",
         "redux": "^5.0.1",
-        "redux-thunk": "^3.1.0"
+        "redux-thunk": "^3.1.0",
+        "regenerator-runtime": "^0.14.1"
     },
     "resolutions": {
         "string-width": "4.2.3"
