--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@svgr/webpack": "^8.1.0",
         "@testing-library/jest-dom": "^6.4.2",
         "@testing-library/react": "^14.2.1",
+        "@types/chart.js": "^2.9.41",
         "@types/dotenv-webpack": "^7.0.7",
         "@types/jest": "^29.5.12",
         "@types/node": "^20.11.19",
@@ -66,9 +67,14 @@
         "webpack-dev-server": "^5.0.2"
     },
     "dependencies": {
+        "@types/luxon": "^3.4.2",
         "@types/react-redux": "^7.1.33",
         "axios": "^1.6.7",
         "axios-cache-adapter": "^2.7.3",
+        "chart.js": "3.2.0",
+        "chartjs-adapter-luxon": "^1.3.1",
+        "chartjs-chart-financial": "^0.1.1",
+        "luxon": "^3.4.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.0",
@@ -80,5 +86,6 @@
     },
     "resolutions": {
         "string-width": "4.2.3"
-    }
+    },
+    "types": "./src/index.d.ts"
 }
