--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@types/chart.js": "^2.9.41",
         "@types/dotenv-webpack": "^7.0.7",
         "@types/jest": "^29.5.12",
+        "@types/mapbox-gl": "^3.1.0",
         "@types/node": "^20.11.19",
         "@types/react": "^18.2.57",
         "@types/react-dom": "^18.2.19",
@@ -74,7 +75,10 @@
         "chart.js": "3.2.0",
         "chartjs-adapter-luxon": "^1.3.1",
         "chartjs-chart-financial": "^0.1.1",
+        "dotenv": "^16.4.5",
         "luxon": "^3.4.4",
+        "mapbox-gl": "^3.1.2",
+        "process": "^0.11.10",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.0",
