--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@types/node": "^20.11.19",
         "@types/react": "^18.2.57",
         "@types/react-dom": "^18.2.19",
+        "@types/react-test-renderer": "^18.0.7",
         "@types/webpack": "^5.28.5",
         "@types/webpack-dev-server": "^4.7.2",
         "@typescript-eslint/eslint-plugin": "^7.0.2",
@@ -54,8 +55,10 @@
         "husky": "^9.0.11",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
+        "jest-scss-transform": "^1.0.3",
         "mini-css-extract-plugin": "^2.8.0",
         "prettier": "^3.2.5",
+        "react-test-renderer": "^18.2.0",
         "sass": "^1.71.0",
         "sass-loader": "^14.1.1",
         "style-loader": "^3.3.4",
