--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,11 +12,14 @@
         "baseUrl": ".",
         "paths": {
             "@/*": ["./src/*"]
-        }
+        },
     },
     "ts-node": {
         "compilerOptions": {
             "module": "CommonJS"
         }
-    }
+    },
+    "exclude": [
+        "./src/__mocks__"
+    ]
 }
