feat(CU-##86bxqg3px): add unit tests for project

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         }
     },
     "devDependencies": {
+        "@babel/core": "^7.24.0",
+        "@babel/preset-env": "^7.24.0",
         "@svgr/webpack": "^8.1.0",
         "@testing-library/jest-dom": "^6.4.2",
         "@testing-library/react": "^14.2.1",
@@ -35,10 +37,12 @@
         "@types/react": "^18.2.57",
         "@types/react-dom": "^18.2.19",
         "@types/react-test-renderer": "^18.0.7",
+        "@types/redux-mock-store": "^1.0.6",
         "@types/webpack": "^5.28.5",
         "@types/webpack-dev-server": "^4.7.2",
         "@typescript-eslint/eslint-plugin": "^7.0.2",
         "@typescript-eslint/parser": "^7.0.2",
+        "babel-jest": "^29.7.0",
         "css-loader": "^6.10.0",
         "dotenv-webpack": "^8.0.1",
         "eslint": "^8.56.0",
@@ -59,6 +63,7 @@
         "mini-css-extract-plugin": "^2.8.0",
         "prettier": "^3.2.5",
         "react-test-renderer": "^18.2.0",
+        "redux-mock-store": "^1.5.4",
         "sass": "^1.71.0",
         "sass-loader": "^14.1.1",
         "style-loader": "^3.3.4",
