feat(CU-#86bxrqnd8): add cypress e2e tests for main logic of application

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,14 +12,14 @@
         "baseUrl": ".",
         "paths": {
             "@/*": ["./src/*"]
-        },
+        }
     },
     "ts-node": {
         "compilerOptions": {
             "module": "CommonJS"
         }
     },
-    "exclude": [
-        "./src/__mocks__"
-    ]
+    "include": ["src", "cypress", "webpack.config.ts"],
+    "exclude": ["./src/__mocks__", "./cypress.config.ts"]
+    // "exclude": ["./src/__mocks__", "**/*.spec.ts"]
 }
