--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "format": "prettier --write src/**/*.{ts,tsx,css,md,json} --config ./.prettierrc",
         "test": "jest",
         "test:watch": "jest --watch",
+        "test:cypress": "start-server-and-test start http://localhost:3000 cypress",
+        "cypress": "cypress open",
         "test:coverage": "jest --coverage",
         "prepare": "husky"
     },
@@ -44,6 +46,7 @@
         "@typescript-eslint/parser": "^7.0.2",
         "babel-jest": "^29.7.0",
         "css-loader": "^6.10.0",
+        "cypress": "^13.6.6",
         "dotenv-webpack": "^8.0.1",
         "eslint": "^8.56.0",
         "eslint-config-airbnb": "^19.0.4",
@@ -66,6 +69,7 @@
         "redux-mock-store": "^1.5.4",
         "sass": "^1.71.0",
         "sass-loader": "^14.1.1",
+        "start-server-and-test": "^2.0.3",
         "style-loader": "^3.3.4",
         "ts-jest": "^29.1.2",
         "ts-loader": "^9.5.1",
