--- a/.eslintignore
+++ b/.eslintignore
@@ -4,6 +4,8 @@ src/libs
 global.d.ts
 chart.d.ts
 src/__mocks__
+src/__mocks__/svgrMock.ts
 src/store/currency-data/mockBanksApiData.ts
 cypress.config.ts
 babel.config.js
+
