--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "@types/webpack-dev-server": "^4.7.2",
         "@typescript-eslint/eslint-plugin": "^7.0.2",
         "@typescript-eslint/parser": "^7.0.2",
+        "autoprefixer": "^10.4.18",
         "babel-jest": "^29.7.0",
         "css-loader": "^6.10.0",
         "cypress": "^13.6.6",
@@ -64,6 +65,7 @@
         "jest-environment-jsdom": "^29.7.0",
         "jest-scss-transform": "^1.0.3",
         "mini-css-extract-plugin": "^2.8.0",
+        "postcss-loader": "^8.1.1",
         "prettier": "^3.2.5",
         "react-test-renderer": "^18.2.0",
         "redux-mock-store": "^1.5.4",
